--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ sourceCompatibility = 1.8
 
 jar {
     manifest {
-        attributes 'Implementation-Title': 'Test Jetty', 'Implementation-Version': 0.1
+        attributes 'Implementation-Title': 'Jetty Tests', 'Implementation-Version': 0.1
     }
 }
 
@@ -24,6 +24,7 @@ dependencies {
 task(server, dependsOn: 'classes', type: JavaExec) {
     main = 'test.jetty.TestServer'
     classpath = sourceSets.main.runtimeClasspath
+    systemProperties System.getProperties()
 }
 
 task(client, dependsOn: 'classes', type: JavaExec) {
